# dev-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  cli.py  config.py  db.py  main.py
app/examples/: sample_pr.md  sample_requirement.md
app/llm/: client.py
app/models/: __init__.py  schemas.py  state.py
app/orchestration/: graph.py  nodes.py
app/runtime/: limits.py  sandbox.py  workspace.py
app/storage/: runs.py
app/tools/: __init__.py  artifacts.py  command_runner.py  filesystem.py  git_tools.py  github_tools.py  repo_inspector.py  toolbox.py
config/: settings.example.yaml
prompts/: fixer.md  implementer.md  intake.md  planner.md  pr_writer.md  reviewer.md
scripts/: run_sample.ps1  run_sample.sh
tests/: test_command_runner.py  test_config.py  test_git_tools.py  test_graph_smoke.py  test_pr_payload.py  test_repo_inspector.py  test_schemas.py
